--- a/match-tracker/views/matches/index.ejs
+++ b/match-tracker/views/matches/index.ejs
@@ -1,23 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Matches Index Page</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
-  <a href="/">Team Home Page</a>
-  <h1>All Matches</h1>
-  <ul>
-    <% matches.forEach(function(m) { %>
-      <li>
-        <%= m.match %>
-          - 
-        <%= m.Win ? 'Win' : 'Loss' %>
-      </li>
-    <% }); %>
-  </ul>
-</body>
-</html>
+<%- include('../partials/header') %>
+<h1>Season Schedule</h1>
+
+
+<%- include('../partials/footer') %>
