--- a/match-tracker/views/matches/new.ejs
+++ b/match-tracker/views/matches/new.ejs
@@ -1,6 +1,7 @@
 <%- include('../partials/header') %>
 
 <h1>Game Detail Page</h1>
+<h2>Views Matches New Page</h2>
 <form id="match-form" action="/matches" method="POST">
 <label>Team Name:</label>
 <input type="text" name="teamName"
