--- a/match-tracker/views/matches/new.ejs
+++ b/match-tracker/views/matches/new.ejs
@@ -2,10 +2,19 @@
 
 <h1>Game Detail Page</h1>
 <h2>Views Matches New Page</h2>
+<br>
+
 <form id="match-form" action="/matches" method="POST">
 <label>Team Name:</label>
-<input type="text" name="teamName"
+<input type="text" name="teamName">
+<br>
+<br>
 <label>Home or Away:</label>
-<input type="checkbox" name="homeOrAway" checked>
+<!-- <input type="checkbox" name="homeOrAway" checked> -->
+<select name="homeOrAway">
+  <option value="Home">Home</option>
+  <option value="Away">Away</option>
+
+</select>
 </form>
 <%- include('../partials/footer') %>
