--- a/match-tracker/views/matches/new.ejs
+++ b/match-tracker/views/matches/new.ejs
@@ -30,7 +30,18 @@
 <br>
 <br>
 
+<label>Stadium:
+<input type="text" name="stadium">
+</label>
 
-
+<br>
+<br>
+<!-- how do i make this in a record format? 10-2? -->
+<label>Opponent Record:
+<input type="number" name="record">
+</label>
+<br>
+<br>
+<input type="submit" value="Add Game to Schedule">
 </form>
 <%- include('../partials/footer') %>
