--- a/match-tracker/views/partials/header.ejs
+++ b/match-tracker/views/partials/header.ejs
@@ -8,7 +8,10 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
+  
+  <nav>
   <a href="/">Team Home Page</a> |   <a href="/matches">Schedule</a> | <a href="/matches/new">Add Game to Schedule</a>
+  </nav>
 
   
   
