--- a/match-tracker/views/matches/index.ejs
+++ b/match-tracker/views/matches/index.ejs
@@ -1,5 +1,28 @@
 <%- include('../partials/header') %>
-<h1>Views Matches Index Page</h1>
+<h2>Views Matches Index Page</h2>
+<table>
+  <thread>
+    <tr>
+      <th>Team Name</th>
+      <th>Home or Away</th>
+      <th>Game Location</th>
+      <th>Stadium</th>
+      <th>Opponent Record</th>
+    </tr>
+  </thread>
+  <tbody>
+    <% matches.forEach(function(m) { %>
 
+      <tr>
+        <td><%= m.teamName %></td>
+        <td><%= m.homeOrAway %></td>
+        <td><%= m.location %></td>
+        <td><%= m.stadium %></td>
+        <td><%= m.record %></td>
+        <td><%= m.result %></td>
+      </tr>
+    <% }) %>
+  </tbody>
+</table>
 
 <%- include('../partials/footer') %>
