--- a/match-tracker/views/matches/new.ejs
+++ b/match-tracker/views/matches/new.ejs
@@ -42,7 +42,16 @@
 </label>
 <br>
 <br>
-<input type="submit" value="Add Game to Schedule">
+
+<label>Result:
+  <select name="result">
+    <option value="Win">Win</option>
+    <option value="Loss">Loss</option>
+  </select>
+  </label>
+  <br>
+  <br>
+  <input type="submit" value="Add Game to Schedule">
 </form>
 <p><%= errorMsg %></p>
 
