--- a/match-tracker/views/partials/header.ejs
+++ b/match-tracker/views/partials/header.ejs
@@ -10,7 +10,8 @@
 <body>
   
   <nav>
-  <a href="/">Team Home Page</a> |   <a href="/matches">Schedule</a> | <a href="/matches/new">Add Game to Schedule</a>
+  <a href="/">Team Home Page</a> |   <a href="/matches">Schedule</a> | <a href="/matches/new">Add Game to Schedule</a> | <a href="/matches/index">Team Information Page</a>
+  <!-- this last a tag may need to be just matches -->
   </nav>
 
   
