--- a/match-tracker/views/matches/index.ejs
+++ b/match-tracker/views/matches/index.ejs
@@ -8,6 +8,7 @@
       <th>Game Location</th>
       <th>Stadium</th>
       <th>Opponent Record</th>
+      <th>Result</th>
     </tr>
   </thread>
   <tbody>
