--- a/match-tracker/public/stylesheets/style.css
+++ b/match-tracker/public/stylesheets/style.css
@@ -1,8 +1,20 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: seashell
 }
 
 a {
   color: #00B7FF;
 }
+#match-form {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 1rem;
+}
+/* 
+#add-review-form input[type="submit"] {
+  width: 8rem;
+  grid-column: 2 / 3;
+  margin-bottom: 2rem;
+} */
