--- a/match-tracker/public/stylesheets/style.css
+++ b/match-tracker/public/stylesheets/style.css
@@ -7,14 +7,11 @@ body {
 a {
   color: #00B7FF;
 }
-#match-form {
-  display: grid;
-  grid-template-columns: auto auto;
-  gap: 1rem;
-}
-/* 
-#add-review-form input[type="submit"] {
+
+/* keep at bottom of page  */
+
+#add-log-form input[type="submit"] {
   width: 8rem;
   grid-column: 2 / 3;
   margin-bottom: 2rem;
-} */
+}
