--- a/match-tracker/views/index.ejs
+++ b/match-tracker/views/index.ejs
@@ -8,6 +8,6 @@
   <body>
     <h1><%= title %></h1>
     
-    <a href="/matches">Schedule</a>
+    <a href="/matches">Team Information</a>
   </body>
 </html>
