--- a/match-tracker/public/stylesheets/style.css
+++ b/match-tracker/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   box-sizing: border-box;
   font-family: Helvetica;
   color: #424748;
@@ -6,12 +6,12 @@
 
 body {
   margin: auto;
-  padding: 20px;
+  padding: 10px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color: seashell;
   height: 100vh;
   display: grid;
-  grid-template-rows: 50px 1fr;
+  grid-template-rows: 20px 1fr;
   grid-template-areas:
   "nav"
 
@@ -21,7 +21,7 @@ body > nav {
   grid-area: nav;
   background-color: black;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   padding: 0 20px 0 30px;
 }
@@ -32,8 +32,8 @@ a {
 
 /* keep at bottom of page  */
 
-#add-log-form input[type="submit"] {
+/* #add-log-form input[type="submit"] {
   width: 8rem;
   grid-column: 2 / 3;
   margin-bottom: 2rem;
-}
+}  */
