--- a/match-tracker/views/index.ejs
+++ b/match-tracker/views/index.ejs
@@ -6,8 +6,10 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
+    <nav>
+    <h1 class="main-h1"><%= title %></h1>
     
-    <a href="/matches">Team Information</a>
+    <a class="homelink" href="/matches">Game Information</a>
+    </nav>
   </body>
 </html>
