--- a/match-tracker/views/matches/index.ejs
+++ b/match-tracker/views/matches/index.ejs
@@ -21,7 +21,7 @@
         <td><%= m.stadium %></td>
         <td><%= m.record %></td>
         <td><%= m.result %></td>
-        <td><a href="/matches/<%= m._id %>">Game Information</a></td>
+        <td><a class="gameinfolink" href="/matches/<%= m._id %>">Game Information</a></td>
       </tr>
     <% }) %>
   </tbody>
