--- a/match-tracker/views/matches/new.ejs
+++ b/match-tracker/views/matches/new.ejs
@@ -36,9 +36,9 @@
 
 <br>
 <br>
-<!-- how do i make this in a record format? 10-2? -->
+
 <label>Opponent Record:
-<input type="number" name="record">
+<input type="text" name="record">
 </label>
 <br>
 <br>
