--- a/match-tracker/public/stylesheets/style.css
+++ b/match-tracker/public/stylesheets/style.css
@@ -2,25 +2,43 @@
 
 body {
   text-align: center;
+  background-image: url('https://windows10spotlight.com/wp-content/uploads/2016/12/87df4d5fc9a63e774b7d62a05279aa84.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  color: white;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
 }
- h1, h2, h5 {
-  text-align: center;
- }
 
-/* header style */
+h1, h2, h5 {
+  text-align: center;
+  font-size: 40px;
+}
+
+.main-h1 {
+  color: coral;
+  font-size: 50px;
+}
+
+/* header & nav bar style */
 
 nav {
   background-color: black;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 16 px;
 }
 
 nav a {
-  color: silver;
+  color: seashell;
   text-decoration: none;
   padding: 8px 16px;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 nav a:hover {
-  background-color: silver;
+  background-color: seashell;
   color: black;
 }
 
@@ -29,4 +47,98 @@ nav a:hover {
 footer {
   margin-top: 40px;
   text-align: center;
+}
+
+/* matches styles */
+
+table {
+  margin: 0 auto;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  padding: 8px;
+  text-align: center;
+}
+
+th {
+  background-color: black;
+  color: seashell;
+}
+
+/* show page style */
+
+#show-page {
+  
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#show-page div {
+  text-align: center;
+  flex: 1 0 33%;
+}
+
+#add-log-form {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 30px;
+}
+
+#add-log-form label {
+  display: block;
+  text-align: center;
+}
+
+#add-log-form textarea {
+  width: 30%;
+  height: 40px;
+  margin-bottom: 10px;
+}
+
+#add-log-form input[type="submit"] {
+  padding: 10px 20px;
+  margin-bottom: 5px;
+  
+}
+
+
+
+
+.gameinfolink {
+  .gameinfolink {
+    display: inline-block;
+    color: black;
+    background-color: #e0e0e0;
+    padding: 10px 5px 10px 5px;
+    margin-bottom: 5px;
+    border: none;
+    border-radius: 4px;
+    text-decoration: none;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }}
+  
+  .gameinfolink:hover {
+    background-color: #c0c0c0;
+  }
+  
+
+/* index page style */
+
+a {
+  display: block;
+  margin-top: 20px;
+}
+
+.homelink:hover {
+  color: black;
+  background-color: seashell;
 }
