--- a/match-tracker/views/index.ejs
+++ b/match-tracker/views/index.ejs
@@ -9,7 +9,7 @@
     <nav>
     <h1 class="main-h1"><%= title %></h1>
     
-    <a class="homelink" href="/matches">Game Information</a>
+    <a class="homelink" href="/matches">Schedule Information</a>
     </nav>
   </body>
 </html>
